GAWB-2059: copy entity (#190)
new endpoint to copy a method, including permissions
